src/objects/APTS_Product_Line_Tree__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Alternative_ID__c</fullName>
        <label>Alternative ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BU_Name__c</fullName>
        <label>BU Name</label>
        <picklist>
            <picklistValues>
                <fullName>Breakers &amp; Switches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclosures &amp; DIN-Rail Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LV Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protection, Connection &amp; Wire Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sundry LP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wiring Accessories</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_BU__c</fullName>
        <label>BU</label>
        <picklist>
            <picklistValues>
                <fullName>LPBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPCW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPWA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>LP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Final_ID__c</fullName>
        <label>Final ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PG_Name__c</fullName>
        <label>PG Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PG__c</fullName>
        <label>PG</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_1_ID__c</fullName>
        <label>Product Line 1 ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_1_Name__c</fullName>
        <label>Product Line 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_2_ID__c</fullName>
        <label>Product Line 2 ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_2_Name__c</fullName>
        <label>Product Line 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_3_ID__c</fullName>
        <label>Product Line 3 ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_3_Name__c</fullName>
        <label>Product Line 3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Line Tree</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>APTS_External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PLT-{0000}</displayFormat>
        <label>Product Line Tree</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Line Tree</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>